--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "hoist-non-react-statics": "^3.3.0",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
-    "react-native": "0.61.2"
+    "react-native": "0.61.2",
+    "react-native-easy-toast": "^1.2.0",
+    "react-native-fast-image": "^7.0.2",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-offline": "^5.1.0",
+    "react-native-status-bar-height": "^2.4.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-props-mapper": "^1.0.1",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
