--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-offline": "^5.1.0",
     "react-native-status-bar-height": "^2.4.0",
+    "react-native-tabs": "^1.0.9",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-props-mapper": "^1.0.1",
     "react-navigation-stack": "^1.9.4",
+    "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
