--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-offline": "^5.1.0",
+    "react-native-reanimated": "^1.4.0",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-tabs": "^1.0.9",
     "react-native-vector-icons": "^6.6.0",
