--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,8 @@ target 'T_MOVIE_SWIPER' do
   pod 'Yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
   pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
